--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   intl: ^0.17.0
   sqflite: ^2.0.3
   date_picker_timeline: ^1.2.3
+  flutter_local_notifications: ^9.7.0
+  flutter_native_timezone: ^2.0.0
+  get:
+
 
 dev_dependencies:
   flutter_test:
